# segstore

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.github/: settings.yml
.github/workflows/: ci.yml
benches/: store.rs
docs/: segstore-durability-sidecars.md
docs/design/: out-of-core-segment-reader.md  storage-ecosystem-and-generation-store.md
examples/: README.md  inverted_index.rs  persist_index.rs  postings_sidecar.rs  vector_search.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: ops.rs  recover.rs  recover_manifest.rs
src/: lib.rs
