[package]
name = "segstore"
version = "0.5.0"
edition = "2021"
rust-version = "1.80"
license = "MIT OR Apache-2.0"
authors = ["Arc <attobop@gmail.com>"]
description = "Generic durable segmented store: write-ahead log, immutable segments, tombstones, checkpoint, and compaction"
repository = "https://github.com/arclabs561/segstore"
documentation = "https://docs.rs/segstore"
keywords = ["lsm", "wal", "segments", "index", "persistence"]
categories = ["data-structures", "database-implementations"]

[workspace]

[dependencies]
crc32fast = "1"
durability = "0.7.2"
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
proptest = "1"
criterion = "0.5"
postings = { version = "0.2.13", features = ["raw-segment"] }

[[bench]]
name = "store"
harness = false

[[example]]
name = "postings_sidecar"
